# nextdb

./: .gitignore  LICENSE.md
dev_tools/gdev/: README.md
dev_tools/gdev/gdev/: dependency.py
production/: CMakeLists.txt  README.md  gdev.cfg
production/cmake/: gaia_internal.cmake
production/common/: CMakeLists.txt
production/common/src/: hash.cpp
production/common/tests/: test_assert.cpp  test_bitmap.cpp  test_hash.cpp
production/db/: CMakeLists.txt
production/db/core/: CMakeLists.txt
production/db/core/src/: chunk_manager.cpp  client_contexts.cpp  client_messenger.cpp  db_client.cpp  db_client_api.cpp  db_server.cpp  db_server_exec.cpp  exceptions.cpp  gaia_ptr.cpp  gaia_ptr_api.cpp  gaia_ptr_client.cpp  memory_manager.cpp  server_contexts.cpp  txn_metadata.cpp
production/db/core/src/flatbuffers/: messages.fbs
production/db/core/tests/: db_test_base.hpp  test_concurrent_db_client.cpp  test_db_client.cpp  test_sessions.cpp  test_stm_api.cpp
production/db/inc/core/: client_contexts.hpp  client_contexts.inc  db_client.hpp  db_client.inc  db_helpers.hpp  db_internal_types.hpp  db_internal_types.inc  db_object_helpers.hpp  db_server.hpp  db_server.inc  db_shared_data.hpp  db_shared_data_client.inc  db_shared_data_interface.inc  db_shared_data_server.inc  mapped_data.hpp  mapped_data.inc  memory_helpers.inc  memory_manager.hpp  memory_structures.inc  memory_types.hpp  safe_ts.hpp  safe_ts.inc  server_contexts.hpp  session_metadata.hpp  session_metadata.inc  txn_metadata.hpp  txn_metadata.inc  txn_metadata_entry.hpp  txn_metadata_entry.inc  watermarks.hpp  watermarks.inc
production/inc/gaia/: common.hpp  exceptions.hpp
production/inc/gaia/db/: gaia_var.hpp  gaia_var.inc
production/inc/gaia/internal/: common_std.inc
production/inc/gaia_internal/: exceptions.hpp
production/inc/gaia_internal/common/: assert.hpp  backoff.hpp  bitmap.hpp  bitmap.inc  compile_time_hash.hpp  fd_helpers.hpp  generator_iterator.hpp  generator_iterator.inc  hash.hpp  socket_helpers.hpp
production/inc/gaia_internal/db/: db.hpp  db_object.hpp  db_types.hpp  gaia_ptr.hpp  gaia_ptr.inc  gaia_ptr_api.hpp
production/tools/: CMakeLists.txt
production/tools/gaia_style/: CMakeLists.txt
production/tools/gaia_style/tests/: clang_format.cpp
